apps/sample/sample-DeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app: sample
  creationTimestamp: null
  labels:
    app: sample
  name: sample
spec:
  replicas: 0
  strategy:
    resources: {}
  template:
    metadata:
      annotations:
        app: sample
      creationTimestamp: null
      labels:
        app: sample
      name: sample
    spec:
      containers:
      - env:
        - name: SAMPLE
          value: VALUE
        image: sample:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: sample
        ports:
        - containerPort: 8080
          name: basic
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /info
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 100Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
